avoid to use get first
Signed-off-by: xinyual <xinyual@amazon.com>