@@ -255,13 +255,13 @@ public class CalciteRelNodeVisitor extends AbstractNodeVisitor<RelNode, CalciteP
     UnresolvedPlan childNode = subqueryPlan;
     while (childNode.getChild() != null
         && !childNode.getChild().isEmpty()
-        && !(childNode.getChild().getFirst() instanceof Values)) {
+        && !(childNode.getChild().get(0) instanceof Values)) {
       if (childNode.getChild().size() > 1) {
         throw new RuntimeException("AppendPipe doesn't support multiply children subquery.");
       }
-      childNode = (UnresolvedPlan) childNode.getChild().getFirst();
+      childNode = (UnresolvedPlan) childNode.getChild().get(0);
     }
-    childNode.attach(node.getChild().getFirst());
+    childNode.attach(node.getChild().get(0));
 
     subqueryPlan.accept(this, context);
 
